# openwrt-urngd

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  log.h  urngd.c
cmake/: openwrt-toolchain-ath79.cmake  openwrt-toolchain-imx6.cmake
patches/: patch-jent.patch  series
